# SMLDist

./: .gitmodules  LICENSE  README.md  requirements.txt  setup.cfg
examples/: train_realworld.toml
tasnem_har/: __init__.py
tasnem_har/datasets/: __init__.py  realworld_har.py
tasnem_har/models/: __init__.py  backbone.py  classifier.py  loss_functions.py  units.py  utils.py
tasnem_har/tasks/: __init__.py
