[metadata]
name = tasnem-har
version = 1.0.1
author = Runze Chen
author_email = chenrz925@icloud.com
description = Teacher Assisted Slim Neural Model For Human Activity Recognition.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chenrz925/TASNeM-HAR
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: GPU :: NVIDIA CUDA
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    waterch-tasker<0.3.0
    torch<=1.7.1
    pytorch-ignite<=0.4.2
    pytorch-ranger>=0.1.1
    pandas>=1.1.3
    numpy>=1.18.1
include_package_data = True
